--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,8 @@
 	</dependencies>
 
 	<build>
-		<plugins>			<plugin>
+		<plugins>
+			<plugin>
 			<groupId>org.codehaus.mojo</groupId>
 			<artifactId>exec-maven-plugin</artifactId>
 			<version>1.6.0</version>
